FInished the header

--- a/index.html
+++ b/index.html
@@ -54,7 +54,33 @@
                 </ul>
             </nav>
         </div>
-        <div id="header"></div>
+        <div id="header">
+            <div id="top-header">
+                <div id="top-search">
+                    <img class="search-icon" src="/img/search.png" alt="">
+                    <div class="search-bar"></div>
+                </div>
+                <div id="top-profile">
+                    <img src="/img/notification.png" alt="" class="notifications">
+                    <img src="/img/man.png" alt="" class="profile-icon">
+                    <div class="profile-name">Hugo COZIC</div>
+
+                </div>
+            </div>
+            <div id="bottom-header">
+                <div id="bottom-profile">
+                    <div class="profile-icon"><img src="/img/man.png" alt="" class="profile-icon"></div>
+                    <p class="welcome">Hi there,</p>
+                    <p class="name">Hugo COZIC</p>
+
+                </div>
+                <div id="bottom-buttons">
+                    <button>Button 1</button>
+                    <button>Button 2</button>
+                    <button>Button 3</button>
+                </div>
+            </div>
+        </div>
         <div id="main">
             <div id="projects">
                 <h2>Projects</h2>
