creation of project cards

--- a/index.html
+++ b/index.html
@@ -84,6 +84,62 @@
         <div id="main">
             <div id="projects">
                 <h2>Projects</h2>
+                <div id="project-cards">
+                    <div class="card">
+                        <p class="title">Project 1</p>
+                        <p class="card-text">This is the text from the card 1. This is another line of text without interest to fill the space because i d'ont have any other idea of what to write.</p>
+                        <div class="card-icons">
+                            <img src="/img/star.png" alt="">
+                            <img src="/img/eye.png" alt="">
+                            <img src="/img/share.png" alt="">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <p class="title">Project 1</p>
+                        <p class="card-text">This is the text from the card 1. This is another line of text without interest to fill the space because i d'ont have any other idea of what to write.</p>
+                        <div class="card-icons">
+                            <img src="/img/star.png" alt="">
+                            <img src="/img/eye.png" alt="">
+                            <img src="/img/share.png" alt="">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <p class="title">Project 1</p>
+                        <p class="card-text">This is the text from the card 1. This is another line of text without interest to fill the space because i d'ont have any other idea of what to write.</p>
+                        <div class="card-icons">
+                            <img src="/img/star.png" alt="">
+                            <img src="/img/eye.png" alt="">
+                            <img src="/img/share.png" alt="">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <p class="title">Project 1</p>
+                        <p class="card-text">This is the text from the card 1. This is another line of text without interest to fill the space because i d'ont have any other idea of what to write.</p>
+                        <div class="card-icons">
+                            <img src="/img/star.png" alt="">
+                            <img src="/img/eye.png" alt="">
+                            <img src="/img/share.png" alt="">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <p class="title">Project 1</p>
+                        <p class="card-text">This is the text from the card 1. This is another line of text without interest to fill the space because i d'ont have any other idea of what to write.</p>
+                        <div class="card-icons">
+                            <img src="/img/star.png" alt="">
+                            <img src="/img/eye.png" alt="">
+                            <img src="/img/share.png" alt="">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <p class="title">Project 1</p>
+                        <p class="card-text">This is the text from the card 1. This is another line of text without interest to fill the space because i d'ont have any other idea of what to write.</p>
+                        <div class="card-icons">
+                            <img src="/img/star.png" alt="">
+                            <img src="/img/eye.png" alt="">
+                            <img src="/img/share.png" alt="">
+                        </div>
+                    </div>
+                </div>
             </div>
             <div id="announcements">
                 <h2>Announcements</h2>
