Finished the project

--- a/index.html
+++ b/index.html
@@ -12,43 +12,63 @@
 <body>
     <div id="content">
         <div id="sidebar">
-            <div class="logo"></div>
+            <div class="logo">
+                <img src="/img/640px-Back_Market.png" alt="">
+            </div>
             <nav>
                 <ul>
                     <li>
-                        <div class="nav-img"></div>
+                        <div class="nav-img">
+                            <img src="/img/share.png" alt="">
+                        </div>
                         <p>Home</p>
                     </li>
                     <li>
-                        <div class="nav-img"></div>
+                        <div class="nav-img">
+                            <img src="/img/share.png" alt="">
+                        </div>
                         <p>Home</p>
                     </li>
                     <li>
-                        <div class="nav-img"></div>
+                        <div class="nav-img">
+                            <img src="/img/share.png" alt="">
+                        </div>
                         <p>Home</p>
                     </li>
                     <li>
-                        <div class="nav-img"></div>
+                        <div class="nav-img">
+                            <img src="/img/share.png" alt="">
+                        </div>
                         <p>Home</p>
                     </li>
                     <li>
-                        <div class="nav-img"></div>
+                        <div class="nav-img">
+                            <img src="/img/share.png" alt="">
+                        </div>
                         <p>Home</p>
                     </li>
                     <li>
-                        <div class="nav-img"></div>
+                        <div class="nav-img">
+                            <img src="/img/share.png" alt="">
+                        </div>
                         <p>Home</p>
                     </li>
                     <li>
-                        <div class="nav-img"></div>
+                        <div class="nav-img">
+                            <img src="/img/share.png" alt="">
+                        </div>
                         <p>Home</p>
                     </li>
                     <li>
-                        <div class="nav-img"></div>
+                        <div class="nav-img">
+                            <img src="/img/share.png" alt="">
+                        </div>
                         <p>Home</p>
                     </li>
                     <li>
-                        <div class="nav-img"></div>
+                        <div class="nav-img">
+                            <img src="/img/share.png" alt="">
+                        </div>
                         <p>Home</p>
                     </li>
                 </ul>
@@ -87,7 +107,8 @@
                 <div id="project-cards">
                     <div class="card">
                         <p class="title">Project 1</p>
-                        <p class="card-text">This is the text from the card 1. This is another line of text without interest to fill the space because i d'ont have any other idea of what to write.</p>
+                        <p class="card-text">This is the text from the card 1. This is another line of text without
+                            interest to fill the space because i d'ont have any other idea of what to write.</p>
                         <div class="card-icons">
                             <img src="/img/star.png" alt="">
                             <img src="/img/eye.png" alt="">
@@ -96,7 +117,8 @@
                     </div>
                     <div class="card">
                         <p class="title">Project 1</p>
-                        <p class="card-text">This is the text from the card 1. This is another line of text without interest to fill the space because i d'ont have any other idea of what to write.</p>
+                        <p class="card-text">This is the text from the card 1. This is another line of text without
+                            interest to fill the space because i d'ont have any other idea of what to write.</p>
                         <div class="card-icons">
                             <img src="/img/star.png" alt="">
                             <img src="/img/eye.png" alt="">
@@ -105,7 +127,8 @@
                     </div>
                     <div class="card">
                         <p class="title">Project 1</p>
-                        <p class="card-text">This is the text from the card 1. This is another line of text without interest to fill the space because i d'ont have any other idea of what to write.</p>
+                        <p class="card-text">This is the text from the card 1. This is another line of text without
+                            interest to fill the space because i d'ont have any other idea of what to write.</p>
                         <div class="card-icons">
                             <img src="/img/star.png" alt="">
                             <img src="/img/eye.png" alt="">
@@ -114,7 +137,8 @@
                     </div>
                     <div class="card">
                         <p class="title">Project 1</p>
-                        <p class="card-text">This is the text from the card 1. This is another line of text without interest to fill the space because i d'ont have any other idea of what to write.</p>
+                        <p class="card-text">This is the text from the card 1. This is another line of text without
+                            interest to fill the space because i d'ont have any other idea of what to write.</p>
                         <div class="card-icons">
                             <img src="/img/star.png" alt="">
                             <img src="/img/eye.png" alt="">
@@ -123,7 +147,8 @@
                     </div>
                     <div class="card">
                         <p class="title">Project 1</p>
-                        <p class="card-text">This is the text from the card 1. This is another line of text without interest to fill the space because i d'ont have any other idea of what to write.</p>
+                        <p class="card-text">This is the text from the card 1. This is another line of text without
+                            interest to fill the space because i d'ont have any other idea of what to write.</p>
                         <div class="card-icons">
                             <img src="/img/star.png" alt="">
                             <img src="/img/eye.png" alt="">
@@ -132,7 +157,38 @@
                     </div>
                     <div class="card">
                         <p class="title">Project 1</p>
-                        <p class="card-text">This is the text from the card 1. This is another line of text without interest to fill the space because i d'ont have any other idea of what to write.</p>
+                        <p class="card-text">This is the text from the card 1. This is another line of text without
+                            interest to fill the space because i d'ont have any other idea of what to write.</p>
+                        <div class="card-icons">
+                            <img src="/img/star.png" alt="">
+                            <img src="/img/eye.png" alt="">
+                            <img src="/img/share.png" alt="">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <p class="title">Project 1</p>
+                        <p class="card-text">This is the text from the card 1. This is another line of text without
+                            interest to fill the space because i d'ont have any other idea of what to write.</p>
+                        <div class="card-icons">
+                            <img src="/img/star.png" alt="">
+                            <img src="/img/eye.png" alt="">
+                            <img src="/img/share.png" alt="">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <p class="title">Project 1</p>
+                        <p class="card-text">This is the text from the card 1. This is another line of text without
+                            interest to fill the space because i d'ont have any other idea of what to write.</p>
+                        <div class="card-icons">
+                            <img src="/img/star.png" alt="">
+                            <img src="/img/eye.png" alt="">
+                            <img src="/img/share.png" alt="">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <p class="title">Project 1</p>
+                        <p class="card-text">This is the text from the card 1. This is another line of text without
+                            interest to fill the space because i d'ont have any other idea of what to write.</p>
                         <div class="card-icons">
                             <img src="/img/star.png" alt="">
                             <img src="/img/eye.png" alt="">
@@ -143,27 +199,59 @@
             </div>
             <div id="announcements">
                 <h2>Announcements</h2>
-                <div class="announce">
-                    <span>Annouce 1</span>
-                    <p>Text from the Annouce 1<br>
-                        Text from the Annouce 1<br>
-                        Text from the Annouce 1</p>
-                </div>
-                <div class="announce">
-                    <span>Annouce 1</span>
-                    <p>Text from the Annouce 1<br>
-                        Text from the Annouce 1<br>
-                        Text from the Annouce 1</p>
-                </div>
-                <div class="announce">
-                    <span>Annouce 1</span>
-                    <p>Text from the Annouce 1<br>
-                        Text from the Annouce 1<br>
-                        Text from the Annouce 1</p>
+                <div id="container">
+                    <div class="announce">
+                        <span>Annouce 1</span>
+                        <p>Text from the Annouce 1<br>
+                            Text from the Annouce 1<br>
+                            Text from the Annouce 1</p>
+                    </div>
+                    <div class="announce">
+                        <span>Annouce 1</span>
+                        <p>Text from the Annouce 1<br>
+                            Text from the Annouce 1<br>
+                            Text from the Annouce 1</p>
+                    </div>
+                    <div class="announce">
+                        <span>Annouce 1</span>
+                        <p>Text from the Annouce 1<br>
+                            Text from the Annouce 1<br>
+                            Text from the Annouce 1</p>
+                    </div>
                 </div>
             </div>
             <div id="trendings">
                 <h2>Trendings</h2>
+                <div id="container">
+                    <div class="trend">
+                        <div class="profile-icon">
+                            <img src="/img/gamer.png" alt="">
+                        </div>
+                        <p class="nickname">@pseudo</p>
+                        <p class="profile-desc">This is my profile</p>
+                    </div>
+                    <div class="trend">
+                        <div class="profile-icon">
+                            <img src="/img/gameuse.png" alt="">
+                        </div>
+                        <p class="nickname">@pseudo</p>
+                        <p class="profile-desc">This is my profile</p>
+                    </div>
+                    <div class="trend">
+                        <div class="profile-icon">
+                            <img src="/img/girl.png" alt="">
+                        </div>
+                        <p class="nickname">@pseudo</p>
+                        <p class="profile-desc">This is my profile</p>
+                    </div>
+                    <div class="trend">
+                        <div class="profile-icon">
+                            <img src="/img/boy.png" alt="">
+                        </div>
+                        <p class="nickname">@pseudo</p>
+                        <p class="profile-desc">This is my profile</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
